--- a/AccesoADatos/packages.config
+++ b/AccesoADatos/packages.config
@@ -8,4 +8,5 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.CodeDom" version="7.0.0" targetFramework="net472" />
   <package id="System.Management" version="7.0.2" targetFramework="net472" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
 </packages>
